Stopgap style changes until Ross can convert Chris' design to CSS

--- a/wp-content/themes/mozilla-festival/style.css
+++ b/wp-content/themes/mozilla-festival/style.css
@@ -23,4 +23,5 @@ body {
     overflow: hidden;
     text-indent: -9999em;
     width: 119px;
+    margin-top: 30px;
 }
